fixed h2 styling issue on tablet

--- a/main.css
+++ b/main.css
@@ -133,6 +133,10 @@ h2 {
   }
   .about-section img {
     height: 364px;
+    width: 45%;
+  }
+  h2 {
+    font-size: var(--heading-S);
   }
 }
 @media only screen and (min-width: 1000px) {
